--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -24,3 +24,41 @@ input {
   padding: 8px 24px;
   width: 400px;
 }
+
+
+li{
+  list-style-type: none;
+
+}
+li a{
+  text-decoration: none;
+  color: gray;
+}
+.header, .footer{
+  display: flex;
+  justify-content: space-between;
+}
+
+.left-links, .right-links{
+  display: flex;
+  gap: 16px;
+}
+
+.footer {
+  background-color: #eeeeee;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
+.content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
+}
+
+button {
+  padding: 8px 16px;
+}
